fixed z-index on profile dropdown

--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -57,9 +57,10 @@
         padding-left: 10px;
         border: 1px solid rgb(188, 188, 188);
         margin-top: 8px;
-        box-shadow: 2px 3px 2px rgb(230, 230, 230);
+        box-shadow: 2px 3px 2px rgba(0, 0, 0, 0.143);
         background-color: white;
         text-decoration: none;
+        z-index: 10;
 }
 
 .clickable-option {
